# Chess_SDL

./: .ninja_deps  .ninja_log  AssetsManager.cpp  AssetsManager.hpp  CMakeCache.txt  CMakeLists.txt  Chess_SDL  ECS.cpp  ECS.hpp  EventsHandler.cpp  EventsHandler.h  EventsSystem.cpp  EventsSystem.h  Game.cpp  Game.hpp  GameEntities.hpp  OrderedVector.h  README.md  RangeTree.h  Sprite.cpp  Sprite.hpp  TextureHandler.cpp  assetsManager.cpp  assetsManager.hpp  baord.cpp  board.hpp  build.ninja  cmake_install.cmake  game.cpp  game.hpp  gameEntites.cpp  gameEntities.hpp  imageObject.hpp  main.cpp  sdl_chess.vcxproj  sdl_chess.vcxproj.filters  textureHandler.cpp  textureHandler.hpp
.cmake/api/v1/reply/: cache-v2-26454214df2531ea531f.json  cmakeFiles-v1-8aa80140e017dcf679d5.json  cmakeFiles-v1-dc9424ce0a59a0eb75f0.json  codemodel-v2-a6cfa8d4134cc1af3ad6.json  index-2022-08-25T07-35-55-0562.json  index-2022-08-25T10-16-52-0257.json  target-Chess_SDL-Debug-ea91751f9146bf838bfb.json
